# oauth10a-rust

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: authorize.rs  client.rs  credentials.rs  execute.rs  lib.rs  logging.rs  metrics.rs  rest.rs  signer.rs  sse.rs
src/client/: connector.rs  mod.rs  proxy.rs  sse.rs
src/credentials/: any.rs  basic.rs  bearer.rs  mod.rs  oauth1.rs
tests/: sse.rs
