[package]
name = "oauth10a"
description = "A rust implementation of the oauth 1.0a protocol fully-async with logging, metrics and tracing facilities"
version = "2.0.0"
edition = "2021"
rust-version = "1.84.1"
authors = ["Florentin Dubois <florentin.dubois@clever-cloud.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/CleverCloud/oauth10a-rust"
keywords = [
    "clevercloud",
    "client",
    "logging",
    "metrics",
    "oauth1a",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "^0.1.86", optional = true }
base64 = { version = "^0.22.1", optional = true }
bytes = { version = "^1.10.0", features = ["serde"], optional = true }
cidr = { version = "^0.3.1", optional = true }
crypto-common = { version = "^0.1.6", optional = true }
hmac = { version = "^0.12.1", features = ["std"], optional = true }
log = { version = "^0.4.21", optional = true }
prometheus = { version = "^0.13.4", optional = true }
reqwest = { version = "^0.12.12", default-features = true, features = ["rustls-tls-webpki-roots", "charset", "http2", "gzip", "deflate", "zstd", "json", "hickory-dns"], optional = true }
serde = { version = "^1.0.217", features = ["derive"], optional = true }
serde_json = { version = "^1.0.138", features = [
    "preserve_order",
    "float_roundtrip",
], optional = true }
sha2 = { version = "^0.10.8", optional = true }
thiserror = { version = "^2.0.11", optional = true }
tracing = { version = "^0.1.41", optional = true }
tracing-futures = { version = "^0.2.5", optional = true }
url = { version = "^2.5.4", default-features = false, features = ["serde"], optional = true }
urlencoding = { version = "^2.1.3", optional = true }
uuid = { version = "^1.13.1", features = ["serde", "v4"], optional = true }

[features]
default = ["client", "logging"]
client = [
    "async-trait",
    "base64",
    "bytes",
    "cidr",
    "crypto-common",
    "hmac",
    "reqwest",
    "serde",
    "serde_json",
    "sha2",
    "thiserror",
    "url",
    "urlencoding",
    "uuid",
]
logging = ["log", "tracing/log-always"]
tracing = ["dep:tracing", "tracing-futures"]
tokio = ["tracing-futures/tokio"]
metrics = ["prometheus"]
